# proxypin-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_PROGRESS.md  README.md  README_CN.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
examples/: claude-desktop-config.json  windsurf-config-local-uv.json  windsurf-config-uvx.json  windsurf-config.json
npm-bridge/: README.md  package.json
scripts/: README.md
src/proxypin_mcp/: __init__.py  __main__.py  config.py  har_reader.py  models.py  server.py
tests/: test_config.py  test_har_reader.py  test_server.py
