[project]
name = "proxypin-mcp"
version = "0.1.0"
description = "MCP Server for ProxyPin - Expose HTTP capture data to AI development tools"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "怜花辞客", email = "jiaeboy@gmail.com" }]
requires-python = ">=3.10"
keywords = ["mcp", "proxypin", "http", "proxy", "capture", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/ElonJask/proxypin-mcp"
Repository = "https://github.com/ElonJask/proxypin-mcp"
Issues = "https://github.com/ElonJask/proxypin-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[project.scripts]
proxypin-mcp = "proxypin_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proxypin_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
